--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
             "name": "Launch",
             "type": "node",
             "request": "launch",
-            "program": "${workspaceRoot}/Day01Part2.js",
+            "program": "${workspaceRoot}/${fileBasename}",
             "stopOnEntry": false,
             "args": [],
             "cwd": "${workspaceRoot}",
